<resources>
    <string name="app_name">MP3 test</string>
    <string name="sign_in">User Login</string>
    <string name="password">Password</string>
    <string name="login">LOG IN</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_new_account">Create new account</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="retype_password">Retype Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="welcome_sign_up_to_continue">Welcome, Sign up to continue</string>
    <string name="email">Email</string>
</resources>