<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/signIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:layout_margin="50dp"
        android:gravity="center"
        android:textStyle="bold"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:layout_below="@id/signIn"
        android:hint="@string/email"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/baseline_person_outline_24"
        android:drawablePadding="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:layout_below="@id/email"
        android:hint="@string/password"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/baseline_key_24"
        android:drawablePadding="20dp"
        android:inputType="textPassword"/>

    <TextView
        android:id="@+id/forgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="0dp"
        android:text="@string/forgot_password"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgotPass"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="0dp"
        android:text="@string/create_new_account"
        android:textColor="@color/white" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginBtn"
        android:layout_below="@id/createAccount"
        android:text="@string/login"
        android:backgroundTint="@color/design_default_color_primary_dark"
        android:layout_centerHorizontal="true"
        android:layout_margin="0dp"/>


</RelativeLayout>