<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/signIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_sign_up_to_continue"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:layout_margin="50dp"
        android:gravity="center"
        android:textStyle="bold"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:layout_below="@id/signIn"
        android:hint="@string/email"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/baseline_person_outline_24"
        android:drawablePadding="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:layout_below="@id/email"
        android:hint="@string/password"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/baseline_key_24"
        android:drawablePadding="20dp"
        android:inputType="textPassword"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password2"
        android:layout_below="@id/password"
        android:hint="@string/retype_password"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/baseline_key_24"
        android:drawablePadding="20dp"
        android:inputType="textPassword"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signUpBtn"
        android:layout_below="@id/password2"
        android:text="@string/sign_up"
        android:backgroundTint="@color/design_default_color_primary_dark"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"/>


</RelativeLayout>